add_executable(pkicxx-test src/pkicxx-test.cpp)
# Basic memory bug catcher
target_compile_options(pkicxx-test PRIVATE -fsanitize=address -fno-omit-frame-pointer)
target_link_options(pkicxx-test PRIVATE -fsanitize=address)
target_link_libraries(pkicxx-test PRIVATE pkicxx)
target_include_directories(pkicxx-test PRIVATE "${CMAKE_SOURCE_DIR}/include")
add_test(NAME "Pkic Init" COMMAND pkicxx-test --pkicInit)
add_test(NAME "Keypair generation" COMMAND pkicxx-test --pairGen)
add_test(NAME "Keypair re-generation" COMMAND pkicxx-test --pairGen)
add_test(NAME "Keypair multi-generation" COMMAND pkicxx-test --pairMultigen)
add_test(NAME "DER pivkey" COMMAND pkicxx-test --getPrivDER)
add_test(NAME "DER pubkey" COMMAND pkicxx-test --getPubDER)
#add_test(NAME "PEM import privkey" COMMAND pkicxx-test --importPrivPEM "${CMAKE_SOURCE_DIR}/data/test_data/priv.pem")
#add_test(NAME "PEM import pubkey" COMMAND pkicxx-test --importPubPEM "${CMAKE_SOURCE_DIR}/data/test_data/pub.pem")
#add_test(NAME "PEM import bundle" COMMAND pkicxx-test --importBundlePEM "${CMAKE_SOURCE_DIR}/data/test_data/bundle.pem")
add_test(NAME "Encrypt" COMMAND pkicxx-test --encrypt)
add_test(NAME "Decrypt" COMMAND pkicxx-test --decrypt)
add_custom_command(TARGET pkicxx-test POST_BUILD COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure)


